--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,6 +28,7 @@
             </div>
             <div class="form-group">
                 <label class="control-label col-sm-2" for="lastnameID">Last Name:</label>
+                  <label class="control-label col-sm-2" for="lastnameID">Last Name:</label>
                 <div class="col-sm-5">
                     <input type="text" class="form-control" name="lastname" id="lastnameID"
                         placeholder="Enter LastName" ng-model="lastname"/>
