--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
  
     <h3 style="color:blue"> My Awesome Spring Boot App Running on Kubernetes Cluster </h3>
     <h3 style="color:blue">  Kubernetes Cluster </h3>
+      <h3 style="color:blue">  Kubernetes Cluster </h3>
       <h3 style="color:blue">  Rutuja Pawal </h3>
       <h3 style="color:blue">  XpertIT  </h3>
     <div ng-controller="postcontroller">
